--- a/html5_test/lesson3/canvas_imageRotate.html
+++ b/html5_test/lesson3/canvas_imageRotate.html
@@ -66,7 +66,7 @@
                             break;
                     }
                 }
-                //测试一下git
+                //使用sourceTree
                 prevBtn.onclick = function(){
                     prevNum++;
                     switch (prevNum%4) {
